2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am: Use the build dir when linking to the
	internal pango clutter renderer.

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h: fixed a typo in comment
	
2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-fixed.h: Remove some inline documentation to
	make the header more readable.

	* clutter/clutter-behaviour.c: The actors are store inside a
	GSList and not in a GList, so change the list operations to
	use the right API.

2007-01-18  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-color.c:
	(clutter_color_darken):
	(clutter_color_lighten):
	Changed calls to clutter_color_shade calls to clutter_color_shadex
	
2007-01-17  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	Bump up version to 0.2.0

2007-01-17  Tomas Frydrych  <tf@openedhand.com>
	* configure.ac: 
	* clutter/clutter-behavior-path.c:
	Added --without-fpu option.

	* doc/refrence/tmpl/clutter-fixed.sgml:
	* clutter/clutter-fixed.c:
	* clutter/clutter-fixed.h:
	Documentation for fixed point API.

	* AUTHORS: added self.
	
2007-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-feature.h:
	* clutter/clutter-feature.c: Move the GL headers from the
	header file to the body.

	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c: Fix apidoc.

	* clutter/clutter-color.h:
	* clutter/clutter-color.c: Ditto.

2007-01-17  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c:
	* clutter/clutter-alpha.c:
	Renamed clutter_fixed_sin() to clutter_sinx() and 
	clutter_angle_sin() to clutter_sini(); added clutter_sqrtx()
	and clutter_sqrti(); added missing copyright.

	* clutter/clutter-behavior.c:
	replaced call to sqrt() with clutter_sqrti()

	* clutter/clutter-behavior-scale.c:
	(clutter_behaviour_scale_alpha_notify):
	Replaced floating point math with fixed point.

2007-01-16  Emmanuele Bassi  <ebassi@openedhand.com>
